--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #ebc144;
+  background-color: #050400;
 /* Use a system font, if none are available use an available sans-sarif   font */
 font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
   Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
@@ -23,13 +23,11 @@ grid-gap: 0vmin;
 }
 
 div {
-border: 7px solid #194584;
+border: 7px solid #e1e5ea;
 border-radius: 50px;
 font-size: 8vmin;
 text-align: center;
 vertical-align: middle;
-
-
 }
 
 .board {
