--- a/css/style.css
+++ b/css/style.css
@@ -52,3 +52,25 @@ border-radius: 15px;
 }
 
 
+.circleBase {
+  border-radius: 50%;
+}
+
+.circle1 {
+  width: 100px;
+  height: 100px;
+  background: #4bc475;
+  border: 1px solid #000;
+}
+
+.circle2 {
+  width: 150px;
+  height: 150px;
+  background: #a1a1a1;
+  border: 1px solid #000;
+}
+
+img {
+  display: block;
+  margin: auto;
+}
