--- a/css/style.css
+++ b/css/style.css
@@ -1,54 +1,51 @@
 body {
   background-color: #050400;
-/* Use a system font, if none are available use an available sans-sarif   font */
-font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-  Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-height: 100vh;
-margin: 0;
-display: flex;
-flex-direction: column;
-color: #fb6b27;
-color:;
-text-align: center;
-font-family: 'Titan One', cursive;
-/* -webkit-text-stroke: 1px white; */
-font-size: 25px;
+
+  font-family: 'Bokor', cursive;
+  height: 100vh;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  color: #fb6b27;
+  color: ;
+  text-align: center;
+  font-size: 30px;
 }
 
 section.board {
-display: grid;
-grid-template-rows: repeat(6, 10vmin);
-grid-template-columns: repeat(7, 10vmin);
-grid-gap: 0vmin;
+  display: grid;
+  grid-template-rows: repeat(6, 10vmin);
+  grid-template-columns: repeat(7, 10vmin);
+  grid-gap: 0vmin;
 }
 
 div {
-border: 7px solid #e1e5ea;
-border-radius: 50px;
-font-size: 8vmin;
-text-align: center;
-vertical-align: middle;
+  border: 7px solid #e1e5ea;
+  border-radius: 50px;
+  font-size: 8vmin;
+  text-align: center;
+  vertical-align: middle;
 }
 
 .board {
-text-align: center;
-display: flex;
-justify-content: center;
-color: #fb6b27;
-padding: 12px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  color: #fb6b27;
+  padding: 12px;
 
 }
 
 #reset-button {
-width: 60px;
-margin: 0 auto;
-display: block;
-padding: 8px;
-font-family: 'Titan One', cursive;
-color: #ffffff;
-background-color: #e10000;
-border: 10px;
-border-radius: 15px;
+  width: 60px;
+  margin: 0 auto;
+  display: block;
+  padding: 8px;
+  font-family: 'Titan One', cursive;
+  color: #ffffff;
+  background-color: #e10000;
+  border: 10px;
+  border-radius: 15px;
 }
 
 
@@ -73,4 +70,13 @@ border-radius: 15px;
 img {
   display: block;
   margin: auto;
+}
+
+h1 {
+  margin: 10px;
+}
+
+h2 {
+  font-size: 25px;
+  margin: 10px;
 }
