--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,23 @@ body {
   font-size: 30px;
 }
 
+.flexbox-container {
+  display: flex;
+  justify-content: center;
+}
+
+.flex-box-item-1 {
+  min-height: 100px;
+}
+
+.flex-box-item-2 {
+  min-height: 100px;
+}
+
+.flex-box-item-3 {
+  min-height: 100px;
+}
+
 section.board {
   display: grid;
   grid-template-rows: repeat(6, 10vmin);
