--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
   background-color: #050400;
   font-family: 'Bokor', cursive;
-  height: 100vh;
+  height: 160vh;
   margin: 0;
   display: flex;
   /* flex-direction: column; */
@@ -12,24 +12,23 @@ body {
 
 .flexbox-container {
   display: flex;
-  /* justify-content: space-center; */
-  /* flex-direction: row; */
+  min-height: 600px;
 }
 
 .flex-box-item-1 {
-  min-height: 300px;
+  min-height: 600px;
   order: 1;
 }
 
 .flex-box-item-2 {
-  min-height: 300px;
+  min-height:600px;
   order: 2;
-  font-size: 30px;
+  font-size: 10px;
 
 }
 
 .flex-box-item-3 {
-  min-height: 300px;
+  min-height: 600px;
   order: 3;
 }
 
@@ -94,10 +93,12 @@ div {
 } */
 
 h1 {
-  margin: 40px;
+  font-size: 80px;
+  margin: 5px;
 }
 
 h2 {
-  font-size: 25px;
+  font-size: 40px;
   margin: 20px;
+  padding: 5px;
 }
