--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ body {
 
 .flex-box-item-1 {
   min-height: 400px;
+  font-size: 30px;
 }
 
 .flex-box-item-2 {
@@ -25,6 +26,7 @@ body {
 
 .flex-box-item-3 {
   min-height: 400px;
+  font-size: 30px;
 }
 
 section.board {
@@ -90,4 +92,12 @@ h1 {
 h2 {
   font-size: 30px;
   margin: -2px;
+}
+
+h3 {
+  margin: -15px;
+}
+
+h4 {
+  margin: -15px;
 }
