--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ section.board {
 div {
   border: 7px solid #e1e5ea;
   border-radius: 50px;
-  font-size: 8vmin;
+  /* font-size: 8vmin; */
   text-align: center;
   vertical-align: middle;
 }
@@ -86,8 +86,12 @@ h2 {
 
 h3 {
   margin: -15px;
+  font-size: 50px;
+
 }
 
 h4 {
   margin: -15px;
+  font-size: 50px;
+
 }
