--- a/css/style.css
+++ b/css/style.css
@@ -1,30 +1,48 @@
 body {
   background-color: #050400;
   font-family: 'Bokor', cursive;
-  height: 120vh;
+  height: 100vh;
+  width: 100vw;
   margin: auto 0;
   display: flex;
   color: #fb6b27;
   text-align: center;
+
   /* font-size: 30px; */
 }
+.body-content {
+  width: 100%;
+  display: flex;
+  /* border: transparent; */
+}
 
-.flex-box-item-1 {
-  min-height: 400px;
+.flexbox-item-1 {
+  /* height: 100%; */
   font-size: 30px;
   margin: auto;
   justify-content: center;
   flex-direction: column;
+  border: 7px solid #e1e5ea;
+  border-radius: 50px;
+  min-width: 260px;
 }
 
-.flex-box-item-2 {
-  min-height: 400px;
+.flexbox-item-2 {
+  /* height: 100%; */
   font-size: 10px;
+  border: 7px solid #e1e5ea;
+  border-radius: 50px;
+  margin: auto;
+  /* min-width: 325; */
 }
 
-.flex-box-item-3 {
-  min-height: 400px;
+.flexbox-item-3 {
+  /* height: 100%; */
   font-size: 30px;
+  border: 7px solid #e1e5ea;
+  border-radius: 50px;
+  min-width: 260px;
+  margin: auto;
 }
 
 section.board {
@@ -32,9 +50,10 @@ section.board {
   grid-template-rows: repeat(6, 10vmin);
   grid-template-columns: repeat(7, 10vmin);
   grid-gap: 0vmin;
+  /* min-width: 350px; */
 }
 
-div {
+.openings {
   border: 7px solid #e1e5ea;
   border-radius: 50px;
   /* font-size: 8vmin; */
@@ -42,12 +61,24 @@ div {
   vertical-align: middle;
 }
 
+/* div {
+  border: 7px solid #e1e5ea;
+  border-radius: 50px;
+  /* font-size: 8vmin; */
+  /* text-align: center;
+  vertical-align: middle;
+} */ 
+
 .board {
   text-align: center;
   display: flex;
   justify-content: center;
   color: #fb6b27;
   padding: 12px;
+
+}
+
+.openings {
 
 }
 
@@ -85,22 +116,19 @@ h2 {
 h3 {
   margin: -15px;
   font-size: 50px;
-
 }
 
 h4 {
   margin: -15px;
   font-size: 50px;
-
 }
 
 #player1,
 #player2 {
-  margin: 0;
-  width:100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: transparent;
-/* padding: 0 50px 0 50px; */
+  /* border: 5px solid white;
+  border-radius: 10%; */
+  margin: 0 10px;
 }
